// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enumeration should render with header in add state and list in default state 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="New entry"
      type="text"
      value={undefined}
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-check"
        />
      </svg>
    </button>
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List undefined"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 126,
              "maxHeight": 126,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="0-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 0
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 42,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 1
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 84,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 2
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state and first item in edit mode, validate button disabled is disabled 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Values
    </span>
    <div
      className="actions"
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <ul
    className="undefined tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List undefined"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 126,
              "maxHeight": 126,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <li
              className="undefined tc-enumeration-item"
              id="0-item"
            >
              <input
                autoFocus={true}
                className="undefined tc-enumeration-item-label"
                onChange={[Function]}
                onKeyDown={[Function]}
                type="text"
              />
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={true}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-check"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-cross"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 42,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 1
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 84,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 2
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state with custom label 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Users
      *
    </span>
    <div
      className="actions"
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <ul
    className="undefined tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List undefined"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 126,
              "maxHeight": 126,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="0-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 0
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 42,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 1
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 84,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 2
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in default state, list in default state and required component 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Values
      *
    </span>
    <div
      className="actions"
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
  <ul
    className="undefined tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List undefined"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 126,
              "maxHeight": 126,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="0-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 0
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 42,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 1
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 84,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 2
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in search state and list in default state 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <input
      autoFocus={true}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value={undefined}
    />
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-check"
        />
      </svg>
    </button>
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </header>
  <ul
    className="undefined tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List undefined"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 126,
              "maxHeight": 126,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="0-item"
            >
              <button
                className="undefined tc-enumeration-item-label"
                disabled="disabled"
              >
                <span>
                  <span>
                    <strong>
                      Lorem
                    </strong>
                     ipsum dolor sit amet 0
                  </span>
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 42,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="1-item"
            >
              <button
                className="undefined tc-enumeration-item-label"
                disabled="disabled"
              >
                <span>
                  <span>
                    <strong>
                      Lorem
                    </strong>
                     ipsum dolor sit amet 1
                  </span>
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 84,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <button
                className="undefined tc-enumeration-item-label"
                disabled="disabled"
              >
                <span>
                  <span>
                    <strong>
                      Lorem
                    </strong>
                     ipsum dolor sit amet 2
                  </span>
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header in selected state with trash icon, and two items in selected mode 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      2 selected values
    </span>
    <button
      className="btn btn-link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOver={[Function]}
      role="link"
      type="button"
    />
  </header>
  <ul
    className="undefined tc-enumeration-items"
    onScroll={[Function]}
  >
    <div
      id="autoSizer"
    >
      <div
        aria-label="grid"
        className="ReactVirtualized__Grid ReactVirtualized__List undefined"
        id={undefined}
        onScroll={[Function]}
        role="grid"
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "boxSizing": "border-box",
            "direction": "ltr",
            "height": 30,
            "overflowX": "hidden",
            "overflowY": "auto",
            "position": "relative",
            "width": 30,
            "willChange": "transform",
          }
        }
        tabIndex={0}
      >
        <div
          className="ReactVirtualized__Grid__innerScrollContainer"
          style={
            Object {
              "height": 126,
              "maxHeight": 126,
              "maxWidth": 30,
              "overflow": "hidden",
              "pointerEvents": "",
              "position": "relative",
              "width": "auto",
            }
          }
        >
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <li
              className="undefined tc-enumeration-item selected-item"
              id="0-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 0
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 42,
                "width": "100%",
              }
            }
          >
            <li
              className="undefined tc-enumeration-item selected-item"
              id="1-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 1
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
          <div
            className="undefined tc-item-container"
            style={
              Object {
                "height": 42,
                "left": 0,
                "position": "absolute",
                "top": 84,
                "width": "100%",
              }
            }
          >
            <li
              className="tc-enumeration-item"
              id="2-item"
            >
              <button
                className="undefined tc-enumeration-item-label btn btn-default"
                disabled={false}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseOver={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Lorem ipsum dolor sit amet 2
                </span>
              </button>
              <div
                className="undefined tc-enumeration-item-actions"
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-pencil"
                    />
                  </svg>
                </button>
                <button
                  className="btn btn-link"
                  disabled={false}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseOver={[Function]}
                  role="link"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    className="tc-svg-icon"
                    focusable="false"
                    title={null}
                  >
                    <use
                      xlinkHref="#talend-trash"
                    />
                  </svg>
                </button>
              </div>
            </li>
          </div>
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`Enumeration should render with header without items 1`] = `
<div
  className="undefined tc-enumeration"
>
  <header
    className="undefined tc-enumeration-header"
  >
    <span>
      Values
    </span>
    <div
      className="actions"
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseOver={[Function]}
        role="link"
        type="button"
      >
        <svg
          aria-hidden="true"
          className="tc-svg-icon"
          focusable="false"
          title={null}
        >
          <use
            xlinkHref="#talend-plus"
          />
        </svg>
      </button>
    </div>
  </header>
</div>
`;
